--- a/compose.yml
+++ b/compose.yml
@@ -26,6 +26,6 @@ services:
         condition: service_healthy
     environment:
       - DOCKER_HOST=tcp://docker-proxy:2375
-      - BASE_PATH=
+      - BASE_PATH=/services
     ports:
       - "8000:8000"
