--- a/compose.yml
+++ b/compose.yml
@@ -26,5 +26,7 @@ services:
         condition: service_healthy
     environment:
       - DOCKER_HOST=tcp://docker-proxy:2375
+      - ROOT_PATH=
+      - API_BASE_PATH=
     ports:
       - "8000:8000"
